add bridge interaction

--- a/l2contract/Scarb.toml
+++ b/l2contract/Scarb.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 
 [dependencies]
 openzeppelin = {git = "https://github.com/enitrat/cairo-contracts", branch = "cairo-1"}
+ownable = { path = "ownable" }
