--- a/l2contract/Scarb.toml
+++ b/l2contract/Scarb.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 
 [dependencies]
 openzeppelin = {git = "https://github.com/enitrat/cairo-contracts", branch = "cairo-1"}
+hack_template = {git = "https://github.com/Astraly-Labs/pragma-hack", branch = "master"}
 ownable = { path = "ownable" }
