--- a/l2contract/Scarb.toml
+++ b/l2contract/Scarb.toml
@@ -6,3 +6,6 @@ version = "0.1.0"
 openzeppelin = {git = "https://github.com/enitrat/cairo-contracts", branch = "cairo-1"}
 hack_template = {git = "https://github.com/Astraly-Labs/pragma-hack", branch = "master"}
 ownable = { path = "ownable" }
+
+[[target.starknet-contract]]
+allowed-libfuncs-list.name = "experimental"
