--- a/l2contract/protostar.toml
+++ b/l2contract/protostar.toml
@@ -2,7 +2,9 @@
 protostar-version = "0.13.0"
 
 [contracts]
-
 TestHero = ["testHerodotus/src"]
 Ownable = ["ownable/src"]
-ERC4626 = ["src"]
+Defipooling = ["src"]
+
+[[target.starknet-contract]]
+allowed-libfuncs-list.name = "experimental_v0.1.0"
