--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "starknet": "4.22.0",
+    "starknet": "^4.22.0",
     "styled-components": "^6.0.0-rc.3",
     "typescript": "5.0.4",
     "viem": "^0.3.11",
