--- a/contracts/l1contracts/package.json
+++ b/contracts/l1contracts/package.json
@@ -19,6 +19,7 @@
     "chai": "^4.2.0",
     "ethers": "^6.6.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-storage-layout": "^0.1.7",
     "solidity-coverage": "^0.8.1",
     "typechain": "^8.2.0"
   }
