--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "axios": "^1.3.6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "moment": "^2.29.4",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "recharts": "^2.7.2",
     "starknet": "^4.22.0",
     "styled-components": "^6.0.0-rc.3",
     "typescript": "5.0.4",
